# FOWT-ML

./: .gitignore  404.html  CITATION.cff  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  deploy-documentation.yml  python-publish.yml  sonarcloud.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api_reference/: index.html
developer_guide/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.dev.md  api_reference.md  developer_guide.md  examples.md  index.md  installation.md  intro.md  project_setup.md
docs/notebooks/: compare_ensemble_models.ipynb  compare_gaussian_process.ipynb  compare_gradient_boosting.ipynb  compare_linear_models.ipynb  compare_models.ipynb  examples_models.ipynb  explore_random_forest_models.ipynb
examples/: index.html
installation/: index.html
notebooks/compare_models/: index.html
notebooks/examples_models/: index.html
project_setup/: index.html
search/: search_index.json
src/: example_config.yml
src/fowt_ml/: __init__.py  base.py  config.py  datasets.py  ensemble.py  gaussian_process.py  guassian_process.py  linear_models.py  my_module.py  neural_network.py  pipeline.py  xgboost.py
tests/: __init__.py  test_base.py  test_config.py  test_datasets.py  test_ensemble.py  test_gaussian_process.py  test_linear_models.py  test_my_module.py  test_neural_network.py  test_pipeline.py  test_xgboost.py
